<resources>
    <string name="app_name">Github Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repo_name">Nombre del Repositorio</string>
    <string name="repo_description">Descripción del repositorio</string>
    <string name="repo_lang">Lenguaje</string>
    <string name="test_text">Texto de prueba</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="repo_edit">Editar Repositorio</string>

</resources>